criei o arquivo index

--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>titulo do site</h1>
+    <h1 class="titulo">titulo do site</h1>
 
-    <p>Guarda-chuva (part. Jay-z)
+    <p id="primeiro-p">Guarda-chuva (part. Jay-z)
 Aham, aham (é, Rihanna)
 Aham, aham (a boa garota ficou má)
 Aham, aham (tomada três, ação!)
-Aham, aham (Hov)
+Aham, aham (Hov)</p>
 
+<p class="paragrafo-bold">
 Sem manchas em meus diamantes
 Deixe chover, eu surfo em dinheiro (eh, eh, eh)
 Desabando com a Dow Jones
