crei um formulario

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <section>
+
     <h1 class="titulo">titulo do site</h1>
 
     <p id="primeiro-p">Guarda-chuva (part. Jay-z)
@@ -29,52 +32,14 @@ Você me conhece
 Em antecipação e por precipitação, guardo fichas para um dia de chuva (eh, eh, eh)
 Jay, o Cara da Chuva está de volta (eh, eh, eh)
 Com a Srta. Raio de Sol, Rihanna, cadê você?
-
-Você tem meu coração
-E nós nunca estaremos distantes
-Você pode estar nas revistas
-Mas você ainda será minha estrela
-Querido, pois no escuro
-Não dá pra ver os carros brilhantes
-E é aí que você precisa de mim
-Com você eu sempre compartilharei
-
-Porque
-Quando o Sol brilha, nós brilhamos juntos
-Te disse que estaria aqui para sempre
-Disse que sempre seria sua amiga
-Fiz um juramento, eu vou cumprir até o fim
-Agora que está chovendo mais do que nunca
-Saiba que ainda teremos um ao outro
-Você pode ficar debaixo do meu guarda-chuva
-Você pode ficar debaixo do meu guarda-chuva
-
-Chuva, chuva, eh, eh, eh
-Debaixo do meu guarda-chuva
-Chuva, chuva, eh, eh, eh
-Debaixo do meu guarda-chuva
-Chuva, chuva, eh, eh, eh
-Debaixo do meu guarda-chuva
-Chuva, chuva, eh, eh, eh, eh, eh, eh
-
-Essas coisas caras
-Nunca ficarão entre nós
-Você é parte da minha entidade
-Daqui até o infinito
-Quando a guerra começar
-Quando o mundo der as cartas
-Se a mão for difícil
-Juntos poderemos consertar seu coração
-
-Porque
-Quando o Sol brilha, nós brilhamos juntos
-Te disse que estaria aqui para sempre
-Disse que sempre seria sua amiga
-Fiz um juramento, eu vou cumprir até o fim
-Agora que está chovendo mais do que nunca
-Saiba que ainda teremos um ao outro
-Você pode ficar debaixo do meu guarda-chuva
-V
+</Section>
+<section>
+<form>
+    <label>
+        informe o seu email para receber mais informações
+    </label>
+</form>
+</section>
 </p>
 
 </body>
