--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
 
@@ -31,16 +32,18 @@ Voamos mais alto que as nuvens, em jatinhos G5 ou melhores
 Você me conhece
 Em antecipação e por precipitação, guardo fichas para um dia de chuva (eh, eh, eh)
 Jay, o Cara da Chuva está de volta (eh, eh, eh)
-Com a Srta. Raio de Sol, Rihanna, cadê você?
+Com a Srta. Raio de Sol, Rihanna, cadê você?</p>
 </Section>
 <section>
-<form>
-    <label>
-        informe o seu email para receber mais informações
-    </label>
-</form>
+<form class="d-flex m-5 gap-3">
+    <label>informe o seu email para receber mais informações</label>
+    <input type="text" placeholder="Email" class="form-control"/>
+    <button class="btn-btn-primary">
+        Enviar
+    </button>
+    </form>
 </section>
-</p>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
